# Server

./: .editorconfig  .gitattributes  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
client_files/export/: CMakeLists.txt  main.cpp
client_files/import/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  additive_lagged_fibonacci_engine.h  base_packet.cpp  base_packet.h  bazaar.cpp  bazaar.h  bodytypes.cpp  bodytypes.h  classes.cpp  classes.h  compiler_macros.h  compression.cpp  compression.h  crash.cpp  crash.h  crc16.cpp  crc16.h  crc32.cpp  crc32.h  data_bucket.cpp  data_bucket.h  data_verification.h  database.cpp  database.h  database_instances.cpp  database_schema.h  dbcore.cpp  dbcore.h  deity.cpp  deity.h  dynamic_zone_base.cpp  dynamic_zone_base.h  dynamic_zone_lockout.cpp  dynamic_zone_lockout.h  emu_constants.cpp  emu_constants.h  emu_limits.cpp  emu_limits.h  emu_opcodes.cpp  emu_opcodes.h  (+162 more)
common/StackWalker/: StackWalker.cpp  StackWalker.h
common/cli/: argh.h  eqemu_command_handler.cpp  eqemu_command_handler.h  terminal_color.hpp
common/content/: world_content_service.cpp  world_content_service.h
common/cron/: croncpp.h
common/database/: database_dump_service.cpp  database_dump_service.h  database_update.cpp  database_update.h  database_update_manifest.h  database_update_manifest_bots.h  database_update_manifest_custom.h
common/discord/: discord.cpp  discord.h  discord_manager.cpp  discord_manager.h
common/event/: event_loop.cpp  event_loop.h  task.h  task_scheduler.cpp  task_scheduler.h  timer.cpp  timer.h
common/events/: player_event_discord_formatter.cpp  player_event_discord_formatter.h  player_event_logs.cpp  player_event_logs.h  player_events.h
common/http/: httplib.h
common/json/: jsoncpp.cpp
common/memory/: ksm.cpp  ksm.h
common/net/: console_server.cpp  console_server.h  console_server_connection.cpp  console_server_connection.h  crc32.cpp  crc32.h  dns.cpp  dns.h  endian.h  eqstream.cpp  eqstream.h  packet.cpp  packet.h  reliable_stream_connection.cpp  reliable_stream_connection.h  reliable_stream_pooling.h  reliable_stream_structs.h  servertalk_client_connection.cpp  servertalk_client_connection.h  servertalk_common.h  servertalk_legacy_client_connection.cpp  servertalk_legacy_client_connection.h  servertalk_server.cpp  servertalk_server.h  servertalk_server_connection.cpp  servertalk_server_connection.h  tcp_connection.cpp  tcp_connection.h  tcp_connection_pooling.h  tcp_server.cpp  tcp_server.h  websocket_server.cpp  websocket_server.h  websocket_server_connection.cpp  websocket_server_connection.h
common/patches/: deprecated_rof2_itemfields.h  deprecated_sod_itemfields.h  deprecated_sof_opcode_list.h  deprecated_titanium_itemfields_a.h  deprecated_titanium_itemfields_b.h  patches.cpp  patches.h  rof.cpp  rof.h  rof2.cpp  rof2.h  rof2_limits.cpp  rof2_limits.h  rof2_ops.h  rof2_structs.h  rof_limits.cpp  rof_limits.h  rof_ops.h  rof_structs.h  sod.cpp  sod.h  sod_limits.cpp  sod_limits.h  sod_ops.h  sod_structs.h  sof.cpp  sof.h  sof_limits.cpp  sof_limits.h  sof_ops.h  sof_structs.h  ss_declare.h  ss_define.h  ss_register.h  template.cpp  template.h  template_limits.h  template_ops.h  template_structs.h  titanium.cpp  (+11 more)
common/pch/: app-pch.h  std-pch.h
common/platform/: inet.h  platform.h
common/process/: process.cpp  process.h
common/repositories/: aa_ability_repository.h  aa_rank_effects_repository.h  (+249 more)
eqlaunch/: CMakeLists.txt  eqlaunch.cpp  worldserver.cpp  worldserver.h  zone_launch.cpp  zone_launch.h
loginserver/: CMakeLists.txt  account_management.cpp  account_management.h  client.cpp  client.h  client_manager.cpp  client_manager.h  encryption.cpp  encryption.h  eq_crypto_api.h  login_server.h  login_types.h  loginserver_command_handler.cpp  loginserver_command_handler.h  loginserver_webserver.cpp  loginserver_webserver.h  main.cpp  options.h  world_server.cpp  world_server.h  world_server_manager.cpp  world_server_manager.h
queryserv/: CMakeLists.txt  database.cpp  database.h  lfguild.cpp  lfguild.h  queryserv.cpp  queryservconfig.cpp  queryservconfig.h  worldserver.cpp  worldserver.h  zonelist.cpp  zonelist.h  zoneserver.cpp  zoneserver.h
shared_memory/: CMakeLists.txt  items.cpp  items.h  main.cpp  spells.cpp  spells.h
tests/: CMakeLists.txt  atobool_test.h  data_verification_test.h  fixed_memory_test.h  fixed_memory_variable_test.h  hextoi_32_64_test.h  ipc_mutex_test.h  main.cpp  memory_mapped_file_test.h  skills_util_test.h  string_util_test.h  task_state_test.h
ucs/: CMakeLists.txt  chatchannel.cpp  chatchannel.h  clientlist.cpp  clientlist.h  database.cpp  database.h  ucs.cpp  ucsconfig.cpp  ucsconfig.h  worldserver.cpp  worldserver.h
world/: CMakeLists.txt  adventure.cpp  adventure.h  adventure_manager.cpp  adventure_manager.h  adventure_template.h  client.cpp  client.h  cliententry.cpp  cliententry.h  clientlist.cpp  clientlist.h  console.cpp  console.h  dynamic_zone.cpp  dynamic_zone.h  dynamic_zone_manager.cpp  dynamic_zone_manager.h  eqemu_api_world_data_service.cpp  eqemu_api_world_data_service.h  eql_config.cpp  eql_config.h  launcher_link.cpp  launcher_link.h  launcher_list.cpp  launcher_list.h  lfplist.cpp  lfplist.h  login_server.cpp  login_server.h  login_server_list.cpp  login_server_list.h  main.cpp  net.cpp  queryserv.cpp  queryserv.h  shared_task_manager.cpp  shared_task_manager.h  shared_task_world_messaging.cpp  shared_task_world_messaging.h  (+28 more)
zone/: CMakeLists.txt  aa.cpp  aa.h  aa_ability.cpp  aa_ability.h  aa_rank.h  aa_rank_effects.h  aggro.cpp  aggromanager.cpp  aggromanager.h  api_service.cpp  api_service.h  attack.cpp  aura.cpp  aura.h  beacon.cpp  beacon.h  bonuses.cpp  bot.cpp  bot.h  bot_command.cpp  bot_command.h  bot_database.cpp  bot_database.h  bot_raid.cpp  bot_raid.h  bot_structs.h  botspellsai.cpp  cheat_manager.cpp  cheat_manager.h  client.cpp  client.h  client_bot.cpp  client_evolving_items.cpp  client_mods.cpp  client_packet.cpp  client_packet.h  client_process.cpp  combat_record.cpp  combat_record.h  (+239 more)
zone/pch/: pch.h
(+679 files in other folders)
